# roxid

./: .gitignore  ADR.md  AGENTS.md  ARCHITECTURE.md  BEFORE_AFTER.md  CHANGES_SUMMARY.md  Cargo.toml  EXTENDING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE-MIT  PARALLEL_JOBS_UI.md  PHASE1_COMPLETION.md  PHASE1_QUICK_REFERENCE.md  PIPELINE.md  PIPELINE_QUICKSTART.md  PUBLISHING.md  QUICKSTART_TUI.md  README.md  REWRITE_PLAN.md  RUNTIME_EXPRESSION_ISSUES.md  SPLIT_VIEW_DEMO.md  TUI_USAGE.md  UI_UPDATES.md  advanced-pipeline.yaml  example-pipeline.yaml  rust-build-pipeline.yaml  simple-test.yaml  test-legacy-pipeline.yaml  test-parallel-jobs.yaml  test-pipeline.yaml  test-stages-pipeline.yaml
.github/workflows/: roxic-ci-cd.yaml  roxid-ci-cd.yaml
examples/: azure-pipelines.yml  conditional-pipeline.yml  container-pipeline.yml  deployment-pipeline.yml  matrix-pipeline.yml  multi-stage-pipeline.yml  roxid-test.yml  simple-pipeline.yml  template-pipeline.yml  test-edge-cases.yml
examples/templates/jobs/: build-job.yml  test-job.yml
examples/templates/stages/: deploy-stage.yml
examples/templates/steps/: build.yml  lint.yml  publish.yml
examples/templates/variables/: common.yml  environment.yml
pipeline-cli/: Cargo.toml
pipeline-cli/src/: main.rs
pipeline-rpc/: Cargo.toml
pipeline-rpc/src/: api.rs  error.rs  handlers.rs  lib.rs
pipeline-rpc/src/handlers/: pipeline_handler.rs  user_handler.rs
pipeline-service/: Cargo.toml  build.rs
pipeline-service/examples/: test_stages.rs
pipeline-service/proto/: pipeline.proto
pipeline-service/src/: grpc.rs  lib.rs  utils.rs
pipeline-service/src/execution/: context.rs  events.rs  executor.rs  graph.rs  matrix.rs  mod.rs
pipeline-service/src/expression/: evaluator.rs  functions.rs  lexer.rs  mod.rs  parser.rs
pipeline-service/src/models/: user.rs
pipeline-service/src/parser/: azure.rs  error.rs  mod.rs  models.rs  template.rs
pipeline-service/src/pipeline/: dependency.rs  executor.rs  mod.rs  models.rs  parser.rs
pipeline-service/src/runners/: container.rs  mod.rs  shell.rs  task.rs
pipeline-service/src/services/: user_service.rs
pipeline-service/src/tasks/: cache.rs  manifest.rs  mod.rs
pipeline-service/src/testing/: assertions.rs  mod.rs  parser.rs  reporter.rs  runner.rs
pipeline-service/src/workflow/: mod.rs  models.rs  parser.rs
roxid-cli/: Cargo.toml  build.rs
roxid-cli/proto/: pipeline.proto
roxid-cli/src/: main.rs  output.rs
roxid-cli/src/commands/: mod.rs  run.rs  task.rs  test.rs  validate.rs
roxid-tui/: Cargo.toml  build.rs
roxid-tui/src/: app.rs  events.rs  lib.rs  main.rs  ui.rs
roxid-tui/src/ui/: components.rs  execution.rs  layout.rs  log_viewer.rs  pipeline_list.rs  pipeline_tree.rs  test_results.rs
rpc/: Cargo.toml
rpc/src/: error.rs  handlers.rs  lib.rs
rpc/src/handlers/: user_handler.rs
service/: Cargo.toml
service/src/: error.rs  lib.rs
service/src/pipeline/: executor.rs  models.rs
service/src/pipeline/runners/: shell.rs
src/: main.rs
tui/: Cargo.toml
tui/src/: app.rs  events.rs  main.rs  ui.rs
tui/src/ui/: components.rs
