[package]
name = "pipeline-rpc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Internal: RPC layer for roxid pipeline service - not intended for direct use"
repository = "https://github.com/yourusername/roxid"
documentation = "https://docs.rs/pipeline-rpc"
readme = false
publish = true

[dependencies]
pipeline-service = { version = "0.1.0", path = "../pipeline-service" }
tokio = { version = "1.0", features = ["sync"] }
# Add your RPC dependencies here (e.g., tonic, tarpc, etc.)
