[package]
name = "pipeline-service"
version = "2.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pipeline execution service for roxid"
repository = "https://github.com/trey-herrington/roxid"
documentation = "https://docs.rs/pipeline-service"
readme = false
publish = true
include = ["src/**/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
dirs = "5.0"
which = "6.0"

[dev-dependencies]
tempfile = "3.0"
