[package]
name = "roxid"
version = "2.3.0"
edition = "2021"
authors = ["Trey Herrington <trey.herrington00@gmail.com>"]
description = "A Terminal User Interface (TUI) for managing and executing YAML-based pipelines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trey-herrington/roxid"
homepage = "https://github.com/yourusername/roxid"
keywords = ["tui", "pipeline", "cli", "terminal", "yaml"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "roxid"
path = "src/main.rs"

[dependencies]
pipeline-service = { version = "2.3.0", path = "../pipeline-service" }
roxid-tui = { version = "2.3.0", path = "../roxid-tui" }
tokio = { version = "1.0", features = ["full"] }
color-eyre = { workspace = true }
clap = { version = "4", features = ["derive"] }
