[package]
name = "roxid-tui"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Internal: Terminal UI components for roxid pipeline runner - not intended for direct use"
repository = "https://github.com/trey-herrington/roxid"
documentation = "https://docs.rs/roxid-tui"
readme = false
publish = true

[dependencies]
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
pipeline-rpc = { version = "0.1.0", path = "../pipeline-rpc" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
