[package]
name = "roxid-tui"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Internal: Terminal UI components for roxid pipeline runner - not intended for direct use"
repository = "https://github.com/trey-herrington/roxid"
documentation = "https://docs.rs/roxid-tui"
readme = false
publish = true

[dependencies]
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
pipeline-service = { version = "0.4.0", path = "../pipeline-service" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
