[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
service = { path = "../service" }
rpc = { path = "../rpc" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
